--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body onclick="my_function()">
 
 
-    <h2>Etiqueta 22</h2>
+    <h2>Etiqueta x</h2>
     <h3 id="etiq_3">Etiqueta 3</h3>
     <button onclick="func_url()">Mostrar URL</button>
     <button onclick="func_tag()">Mostrar TAG</button>
