--- a/index.html
+++ b/index.html
@@ -8,9 +8,10 @@
 </head>
 <body onclick="fun_b()">
 
-    <h3>INICIO 0045</h3>
+    <h3>INICIO 0116</h3>
 
     <p id="para_1"></p>
+    <p id="para_2"></p>
     <button onclick="fun_a()">URL</button>
 
     <script>
@@ -21,7 +22,7 @@
         function fun_b(){
             
             actv_1 = document.activeElement.tagName;
-            document.getElementById("para_1").innerHTML = actv_1;
+            document.getElementById("para_2").innerHTML = actv_1;
         }
     </script>
 
