--- a/index.html
+++ b/index.html
@@ -8,14 +8,20 @@
 </head>
 <body onclick="fun_b()">
 
-    <h3>INICIO 0116</h3>
+    <h3>INICIO 0630</h3>
 
+
+    <button onclick="fun_a()">URL</button>
     <input type="text" value="entrada">
     <p id="para_1"></p>
     <p id="para_2"></p>
-    <button onclick="fun_a()">URL</button>
+    <p id="demo"></p>
+
 
     <script>
+        document.addEventListener("click", fun_lis1);
+        document.addEventListener("click", fun_lis2);
+
         function fun_a(){
             let url1 = document.URL;
             document.getElementById("para_1").innerHTML = url1;
@@ -24,6 +30,12 @@
             
             const actv_1 = document.activeElement.tagName;
             document.getElementById("para_2").innerHTML = actv_1;
+        }
+        function fun_lis1(){
+            document.getElementById("demo").innerHTML += " =>";
+        }
+        function fun_lis2(){
+            document.getElementById("demo").innerHTML += "<= ";
         }
     </script>
 
